--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -1,3 +1,72 @@
 .content {
-    padding-top: 100px;
+    margin: 70px;
+    margin-bottom: 0px;
+    color: black;
+    font-family: 'Consolas';
+    box-shadow: 5px 10px #ebebeb;
+}
+
+.content_dark {
+    margin: 70px;
+    margin-bottom: 0px;
+    font-family: 'Consolas';
+}
+
+.editor {
+    margin-bottom: 20px;
+}
+
+.title {
+    margin: 10px;
+    user-select: none;
+}
+
+.frame {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.frame_dark {
+    background-color: rgb(18 18 18);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+}
+
+.text {
+    color: black;
+}
+
+
+.text_dark {
+    color: rgb(192 192 192);
+}
+
+.themeBtn {
+    background-image: url(./img/dark_mode_black_36dp.svg);
+    background-color: transparent !important;
+    width: 36px;
+    height: 36px;
+    border: none !important;
+}
+
+.themeBtn:focus {
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.themeBtn_dark {
+    background-image: url(./img/light_mode_white_36dp.svg);
+    background-color: transparent !important;
+    width: 36px;
+    height: 36px;
+    border: none !important;
+}
+
+.themeBtn_dark:focus {
+    border: none !important;
+    box-shadow: none !important;
 }
